cmake_minimum_required(VERSION 3.16)
project(B_CPP_300_BER_3_1_CPPD10_karl_erik_stoerzel)

set(CMAKE_CXX_STANDARD 14)

add_executable(B_CPP_300_BER_3_1_CPPD10_karl_erik_stoerzel main.cpp ex02/Squad.cpp ex02/Squad.hpp ex02/TacticalMarine.cpp ex02/TacticalMarine.hpp ex02/AssaultTerminator.cpp ex02/AssaultTerminator.hpp ex03/AMateria.cpp ex03/AMateria.hpp ex03/Ice.cpp ex03/Ice.hpp ex03/Cure.cpp ex03/Cure.hpp ex03/Character.cpp ex03/Character.hpp ex03/MateriaSource.cpp ex03/MateriaSource.hpp ex04/DeepCoreMiner.cpp ex04/DeepCoreMiner.hpp ex04/StripMiner.cpp ex04/StripMiner.hpp ex04/AsteroKreog.cpp ex04/AsteroKreog.hpp ex04/KoalaSteroid.cpp ex04/KoalaSteroid.hpp ex04/MiningBarge.cpp ex04/MiningBarge.hpp ex04/IAsteroid.hpp)