cmake_minimum_required(VERSION 3.16)
project(B_CPP_300_BER_3_1_CPPD13_karl_erik_stoerzel)

set(CMAKE_CXX_STANDARD 14)

add_executable(B_CPP_300_BER_3_1_CPPD13_karl_erik_stoerzel
        main.cpp
        ex00/Picture.cpp ex00/Picture.hpp ex00/Toy.cpp ex00/Toy.hpp
        ex01/Picture.cpp ex01/Picture.hpp ex01/Toy.cpp ex01/Toy.hpp
        ex02/Picture.cpp ex02/Picture.hpp ex02/Toy.cpp ex02/Toy.hpp
        ex02/Buzz.cpp ex02/Buzz.hpp ex02/Woody.cpp ex02/Woody.hpp
        ex03/Picture.cpp ex03/Picture.hpp ex03/Toy.cpp ex03/Toy.hpp
        ex03/Buzz.cpp ex03/Buzz.hpp ex03/Woody.cpp ex03/Woody.hpp
        ex04/Picture.cpp ex04/Picture.hpp ex04/Toy.cpp ex04/Toy.hpp
        ex04/Buzz.cpp ex04/Buzz.hpp ex04/Woody.cpp ex04/Woody.hpp
        ex05/Picture.cpp ex05/Picture.hpp ex05/Toy.cpp ex05/Toy.hpp
        ex05/Buzz.cpp ex05/Buzz.hpp ex05/Woody.cpp ex05/Woody.hpp
        ex06/Picture.cpp ex06/Picture.hpp ex06/Toy.cpp ex06/Toy.hpp
        ex06/Buzz.cpp ex06/Buzz.hpp ex06/Woody.cpp ex06/Woody.hpp
        ex06/ToyStory.cpp ex06/ToyStory.hpp
        )