cmake_minimum_required(VERSION 3.16)
project(B_CPP_300_BER_3_1_CPPD17_karl_erik_stoerzel)

set(CMAKE_CXX_STANDARD 14)

add_executable(B_CPP_300_BER_3_1_CPPD17_karl_erik_stoerzel main.cpp ex00/find.hpp ex01/MyAlgorithms.hpp
        ex02/Cesar.cpp ex02/Cesar.hpp ex02/OneTime.cpp ex02/OneTime.hpp
        ex03/Cesar.cpp ex03/Cesar.hpp ex03/OneTime.cpp ex03/OneTime.hpp ex03/Encryption.cpp ex03/Encryption.hpp ex04/Container.hpp)