cmake_minimum_required(VERSION 3.16)
project(B_CPP_300_BER_3_1_CPPD07A_karl_erik_stoerzel)

set(CMAKE_CXX_STANDARD 14)

add_executable(B_CPP_300_BER_3_1_CPPD07A_karl_erik_stoerzel ex00/Skat.cpp ex00/Skat.hpp
        ex01/KoalaBot.cpp ex01/KoalaBot.hpp ex01/Parts.cpp ex01/Parts.hpp ex01/main.cpp
        ex02/KreogCom.cpp ex02/KreogCom.hpp ex02/main.cpp ex03/Phaser.cpp ex03/Phaser.hpp ex03/Sounds.hpp ex03/main.cpp)